--- a/_config.yml
+++ b/_config.yml
@@ -39,16 +39,14 @@ paginate_path : "/page:num/"
 # per_page: 5
 #  permalink: "/page/:num/"
 # sort_reverse: true
-
+permalink : :title
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
 jekyll-archives:
   enabled:
     - categories
     - tags
   layout: 'archive'
-  permalinks:
-    category: '/category/:name/'
-    tag: '/tag/:name/'
+
 
 # Disqus comments
 # disqus_shortname: bencentra
