--- a/_config.yml
+++ b/_config.yml
@@ -1,68 +1,53 @@
-# External plugins
-# See http://ixti.net/software/2013/01/28/using-jekyll-plugins-on-github-pages.html for making `jekyll archives` work.
+
+# Site settings
+title: SASIDHAR
+name: SASIDHAR
+subtitle: "This is my personal blog"
+email: sasidhar123@protonmail.com
+telegram : Goddoesntexistfam
+description: >
+  This is my personal portfolio website as well as blog. Its is under construction
+baseurl: ""
+url: ""
+twitter_username: nwjstsasi
+github_username:  janaki-sasidhar
+#disqus_baseurl: "https://nikhita.github.io/"
+#disqus_shortname: https-nikinath-github-io
+permalink: :title
+cover: "/assets/header_image.jpg"
+logo: "/assets/logo.png"
+avatar: "/assets/headshot.jpg"
+#ga_tracking_id: "UA-82647777-1"
+
+# Build settings
+markdown: kramdown
+paginate: 5
+paginate_path: "/page:num/"
+inter_post_navigation: true
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      author: "Janaki Sasidhar"
+
+
+# External gems
 plugins:
-  - jekyll-archives # Sorry, not GitHub pages friendly!
+  - jekyll-archives
   - jekyll-sitemap
   - jekyll-paginate-v2
+  - jemoji
+  - jekyll-seo-tag
 
 exclude:
   - "/vendor/"
 
-# Site settings
-title: Centrariums
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
-email: blcentra@gmail.com
-name: Ben Centra
-description: >
-  A simple yet classy theme for your Jekyll website or blog.
-# Base URL of site (i.e. /blog). It should always start with a slash,
-# and never end with a slash. Set it to a blank value if hosting at the
-# root of your server.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
-cover: "/assets/header_image.jpg"
-logo: "/assets/logo.png"
+# Collections
+#collections:
+# - talks
 
-# Build settings
-markdown: kramdown
-inter_post_navigation: true
-highlightjs_theme: "monokai-sublime"
-
-paginate : 5
-paginate_path : "/page:num/"
-
-
-# Pagination Settings
-# https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
-#pagination:
-# enabled: true
-# per_page: 5
-#  permalink: "/page/:num/"
-# sort_reverse: true
-permalink : :title
-# Archive settings (see https://github.com/jekyll/jekyll-archives/)
-jekyll-archives:
-  enabled:
-    - categories
-    - tags
-  layout: 'archive'
-
-
-# Disqus comments
-# disqus_shortname: bencentra
-
-# Google analytics
-# ga_tracking_id: "UA-XXXX-1"
-
-# Category descriptions (for archive pages)
-descriptions:
-  - cat: jekyll
-    desc: "Posts describing Jekyll setup techniques."
-
-  - cat: dummy
-    desc: "Just some placeholder posts, lorem ipsum and the rest."
-
-# Social icons and sharing options
 #
 # Social settings are used in two places:
 # * In the footer, as links to your personal profiles
@@ -77,130 +62,142 @@ descriptions:
 #     url: https://twitter.com/TheBenCentra # URL of your profile (leave blank to not display in footer)
 #     desc: Follow me on Twitter            # Description to display as link title, etc
 #     share: true                           # Include in the "Share" section of posts
+
 social:
   - name: Twitter
     icon: twitter
-    username: TheBenCentra
-    url: https://twitter.com/TheBenCentra
+    username: nwjstsasi
+    url: https://twitter.com/nwjstsasi
     desc: Follow me on Twitter
     share: true
 
-  - name: Facebook
-    icon: facebook
-    username: thebencentra
+  - name: Quora
+    icon: quora
+    username:
     url: ""
-    desc: Friend me on Facebook
-    share: true
+    desc: Follow me on Quora
+    share: false
 
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
+    username: janaki-sasidhar
+    url: https://github.com/janaki-sasidhar
     desc: Fork me on GitHub
     share: false
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+    username: Sasidhar
+    url: https://www.linkedin.com/in/sasidhar-royal-aa6249151
     desc: Connect with me on LinkedIn
     share: true
 
   - name: Google+
     icon: google-plus
-    username: ""
+    username:
     url: ""
     desc: Add me to your Circles
     share: true
 
   - name: YouTube
     icon: youtube
-    username: ""
+    username:
     url: ""
     desc: Subscribe on YouTube
     share: false
 
   - name: Instagram
     icon: instagram
-    username: ""
-    url: ""
+    username: sasidhar
+    url: https://www.instagram.com/sasidhar_pid1/
     desc: Follow me on Instagram
     share: false
 
   - name: Pinterest
     icon: pinterest
-    username: ""
+    username:
     url: ""
     desc: Follow me on Pinterest
     share: true
 
   - name: SoundCloud
     icon: soundcloud
-    username: ""
+    username:
     url: ""
     desc: Follow me on SoundCloud
     share: false
 
   - name: Tumblr
     icon: tumblr
-    username: ""
+    username:
     url: ""
     desc: Follow me on Tumblr
     share: false
 
   - name: Steam
     icon: steam
-    username: ""
+    username:
     url: ""
     desc: Friend me on Steam
     share: false
 
   - name: Dribbble
     icon: dribbble
-    username: ""
+    username:
     url: ""
     desc: Follow me on Dribble
     share: false
 
   - name: Vimeo
     icon: vimeo-square
-    username: ""
+    username:
     url: ""
     desc: Follow me on Vimeo
     share: false
 
   - name: Vine
     icon: vine
-    username: ""
+    username:
     url: ""
     desc: Follow me on Vine
     share: false
 
   - name: Reddit
     icon: reddit
-    username: ""
+    username:
     url: ""
     desc: Share to Reddit
     share: true
 
   - name: "Hacker News"
     icon: hacker-news
-    username: ""
+    username:
     url: ""
     desc: Share to Hacker News
     share: false
+
+  - name: "TELEGRAM"
+    icon: fa-telegram-square
+    username: sasidhar
+    url: "https://t.me/goddoesntexistfam"
+    desc: Share to Hacker News
+    share: false
+
+
+
+
 
 # Social sharing protocols
 # These are for automatically generating sharing metadata for FB and Twitter
 # OS Protocol is for sharing the source of your site, if you're interested. For more, see osprotocol.com
 protocols:
-    fb_image: "/assets/logo.png"
+    fb_image: "/assets/nr-logo.jpg"
     fb_image_width: 612
     fb_image_height: 605
-    fb_image_type: "image/png"
+    fb_image_type: "image/jpg"
 
-    twitter_image: "/assets/logo.png"
+    twitter_image: "/assets/nr-logo.jpg"
 
-    os_repo: "https://github.com/bencentra/centrarium.com"
+    os_repo: "https://github.com/janaki-sasidhar/janaki-sasidhar.github.io"
     os_rcs_type: "git"
-    os_src: "git@github.com:bencentra/centrarium.com.git"
+    os_src: "git@github.com:janaki-sasidhar/janaki-sasidhar.github.io.git"
